# lhcb_style_analysis

./: CMakeLists.txt
include/: Analyser.h  CreateBatchJob.h  EventCounter.h  FitEngine.h  FitOptParser.h  FitterBase.h  FitterUtils.h  OptParser.h  RunEngine.h  Variables.h
include/Bc2Dmunu/: Plotter.h  Selection.h  Trigger.h
include/Bs2KstKst/: AddAngles.h  AddPIDVarsAndDatasets.h  ApplyBDTAndPIDCuts.h  BDTNoPID.h  CutOnBDTAndPID.h  InvariantMassFit.h  PreSelection.h  TightSelection.h  TightSelectionPlotter.h  Trigger.h  TruthMatching.h  Variables_Analysis.h  Variables_PreSel.h
main/: runBc2Dmunu_Analysis.cpp  runBc2Dmunu_MassFit.cpp  runBs2KstKst.cpp  runBs2KstKst_Analysis.cpp  runBs2KstKst_AnalysisWithCuts.cpp  runBs2KstKst_BDTTraining.cpp  runBs2KstKst_InvariantMassFit.cpp  runBs2KstKst_MultiDimCutOpt.cpp  runBs2KstKst_PreSel.cpp  runBs2KstKst_TightSelection.cpp
scripts/: dumpBranches.py  make_html.py  plotEfficiencies.py
src/: Config.cc  CreateBatchJob.cc  EventCounter.cc  FitEngine.cc  FitOptParser.cc  FitterBase.cc  FitterUtils.cc  OptParser.cc  PlotterBase.cc  RunEngine.cc  TMVAWrapperBase.cc
src/Bc2Dmunu/: BasicFitter.cc  Plotter.cc  Selection.cc  Trigger.cc  Variables_Analysis.cc
src/Bs2KstKst/: AddAngles.cc  AddPIDVarsAndDatasets.cc  ApplyBDTAndPIDCuts.cc  BDTNoPID.cc  CutOnBDTAndPID.cc  InvariantMassFit.cc  MultiDimCutOpt.cc  PreSelection.cc  TightSelection.cc  TightSelectionPlotter.cc  Trigger.cc  TruthMatching.cc  Variables_Analysis.cc  Variables_PreSel.cc
src/roofit/: RooExpAndGauss.cc  RooIpatia2.cc  RooPhysBkg.cc
